--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="style.css">
     <title>G3 Architecture</title>
 </head>
-<body>
+<body class="work-sans-font">
     <header>
-
+        <nav class="navbar">
+            <h3 class="brand">G3 Architects</h3>
+        </nav>
     </header>
     <main>
 
