--- a/index.html
+++ b/index.html
@@ -41,6 +41,32 @@
                 <button class="primary-btn">Explore More</button>
             </div>
         </section>
+        <section>
+            <h3 class="section-title">Some Facts</h3>
+            <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="facts-container">
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <j5 class="fact-name"></j5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <j5 class="fact-name"></j5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <j5 class="fact-name"></j5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <j5 class="fact-name"></j5>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
