--- a/index.html
+++ b/index.html
@@ -41,6 +41,36 @@
                 <button class="primary-btn">Explore More</button>
             </div>
         </section>
+        <section class="features">
+            <div class="features-section">
+                <h2 class="features-heading">Features you will <br> love & enjoy</h2>
+                <p class="features-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="features-sub-section">
+                    <h5 class="features-sub-heading">Dexktop & Mobile Version</h5>
+                    <p class="features-sub-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="features-sub-section">
+                    <h5 class="features-sub-heading">Dexktop & Mobile Version</h5>
+                    <p class="features-sub-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="features-sub-section">
+                    <h5 class="features-sub-heading">Dexktop & Mobile Version</h5>
+                    <p class="features-sub-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="features-sub-section">
+                    <h5 class="features-sub-heading">Dexktop & Mobile Version</h5>
+                    <p class="features-sub-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div class="features-img">
+                <img src="images/architect.png" alt="">
+                <button id="experience-badge" class="primary-btn">
+                    <span id="experience-year">10+Years</span><br>
+                    <span>Experience</span>
+
+                </button>
+            </div>
+        </section>
         <section>
             <h3 class="section-title">Some Facts</h3>
             <p class="section-description fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
